--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>My personal site</title>
+        <title>Akshat's Personal Site</title>
     </head>
     <body>
         <table cellspacing="20">
